--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,7 +1,21 @@
-.button {
+.btn {
     background-color: red;
 }
 
-.padded {
-    padding: 25px 30px;
+.btn {
+    transition: 0.5s;
+    padding: 8px 12px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+
+.btnPrimary {
+    color: white;
+    background-color: #ff6347;
+}
+
+.btnPrimary:hover{
+    background-color: rgba(255, 99, 71, 0.54);
 }
